[package]
name = "ifinfo"
version = "0.1.0"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Simple ifconfig placed on Rust"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/deadblackclover/ifinfo"
repository = "https://github.com/deadblackclover/ifinfo"
keywords = ["ifconfig", "ifinfo"]
categories = ["network-programming", "os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interfaces2 = "0.0.5"
